fix lane icon alignment

--- a/scopes/lanes/ui/inputs/lane-selector/lane-placeholder.module.scss
+++ b/scopes/lanes/ui/inputs/lane-selector/lane-placeholder.module.scss
@@ -1,7 +1,7 @@
 .placeholder {
   display: flex;
   align-items: center;
-  padding: 4px 8px 4px 0px;
+  padding: 4px 8px 4px 4px;
   line-height: var(--bit-p-md, 16px);
   font-size: var(--bit-p-md, 16px);
   border-radius: 6px;
